--- a/debian/rules
+++ b/debian/rules
@@ -2,6 +2,7 @@
 
 export PYBUILD_NAME=keylime
 export PYBUILD_DISABLE=test
+export KEYLIME_CONFIG=$(CURDIR)/keylime.conf
 
 %:
 	dh $@ --with python3 --buildsystem=pybuild
