--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends: debhelper (>= 11),
                python3-tornado,
                python3-yaml,
                python3-zmq,
+               tpm-udev,
                tpm2-abrmd,
                tpm2-tools
 Standards-Version: 4.5.0
