--- a/debian/control
+++ b/debian/control
@@ -26,7 +26,21 @@ Homepage: https://keylime.dev
 
 Package: python3-keylime
 Architecture: all
-Depends: ${misc:Depends},
+Depends: libtss2-dev,
+         python3-alembic,
+         python3-cryptography,
+         python3-gnupg,
+         python3-m2crypto,
+         python3-requests,
+         python3-simplejson,
+         python3-sqlalchemy,
+         python3-tornado,
+         python3-yaml,
+         python3-zmq,
+         tpm-udev,
+         tpm2-abrmd,
+         tpm2-tools,
+         ${misc:Depends},
          ${python3:Depends}
 Description: TPM-based key bootstrapping and system integrity measurement
  Keylime is an open source scalable trust system harnessing TPM Technology.
