New upstream version 6.1.1

--- a/keylime.conf
+++ b/keylime.conf
@@ -27,6 +27,11 @@ receive_revocation_port = 8992
 cloudagent_ip = 127.0.0.1
 cloudagent_port = 9002
 
+# Address and port where the verifier and tenant can connect to reach the agent.
+# These keys are optional.
+agent_contact_ip = 127.0.0.1
+agent_contact_port = 9002
+
 # The address and port of registrar server which agent communicate with
 registrar_ip = 127.0.0.1
 registrar_port = 8890
@@ -128,6 +133,9 @@ ek_handle = generate
 [cloud_verifier]
 #=============================================================================
 
+# Unique identifier for the each verifier instances.
+cloudverifier_id = default
+
 # The IP address and port of verifier server binds to
 cloudverifier_ip = 127.0.0.1
 cloudverifier_port = 8881
@@ -198,23 +206,24 @@ registrar_private_key_pw = default
 # Database URL Configuration
 # See this document https://keylime-docs.readthedocs.io/en/latest/installation.html#database-support
 # for instructions on using different database configurations.
-# Database configuration via drivername, username, password, etc is deprecated
-# and superseded by database_url, when database_url is set, other database
-# fields will be ignored.
+# There are two options for the specification of the database connection configuration.
+# 1) A tuple of parameters (e.g., database_drivername, database_username, database_password)
+# 2) A single string in database_url. This, when set, takes precedence over the previous option.
 # An example of database_url value for using sqlite:
 #   sqlite:////var/lib/keylime/cv_data.sqlite
 # An example of database_url value for using mysql:
 #   mysql+pymysql://keylime:keylime@keylime_db:[port]/verifier?charset=utf8
-# If database_url is not set, the deprecated default is "sqlite" and will be
+# If database_url is not set, the default is "sqlite", using method 1, and will be
 # located at "/var/lib/keylime/cv_data.sqlite".
 database_url =
-drivername = sqlite
-username = ''
-password = ''
-host = ''
-port = ''
-database = cv_data.sqlite
-query = ''
+database_drivername = sqlite
+database_username = ''
+database_password = ''
+database_host = ''
+database_name = cv_data.sqlite
+database_query = ''
+# Limits for DB connection pool size in sqlalchemy (https://docs.sqlalchemy.org/en/14/core/pooling.html#api-documentation-available-pool-implementations)
+database_pool_sz_ovfl=5,10
 
 auto_migrate_db = True
 
@@ -334,7 +343,7 @@ vtpm_policy = {"23":["ffffffffffffffffffffffffffffffffffffffff","000000000000000
 # this file is used if tenant provides "default" as the allowlist file
 # this file should be in the form
 # SHA1sum path_to_file
-allowlist = allowlist.txt
+ima_allowlist = allowlist.txt
 
 # Specify a file containing paths that should be ignored by IMA.
 # WARNING: use with great caution as it will affect the security of IMA.
@@ -476,23 +485,24 @@ check_client_cert = True
 # Database URL Configuration
 # See this document https://keylime-docs.readthedocs.io/en/latest/installation.html#database-support
 # for instructions on using different database configurations.
-# Database configuration via drivername, username, password, etc is deprecated
-# and superseded by database_url, when database_url is set, other database
-# fields will be ignored.
+# There are two options for the specification of the database connection configuration.
+# 1) A tuple of parameters (e.g., database_drivername, database_username, database_password)
+# 2) A single string in database_url. This, when set, takes precedence over the previous option.
 # An example of database_url value for using sqlite:
 #   sqlite:////var/lib/keylime/reg_data.sqlite
 # An example of database_url value for using mysql:
-#   mysql+pymysql://keylime:keylime@keylime_db:[port]/registrar?charset=utf8
-# If database_url is not set, the deprecated default is "sqlite" and will be
-# located at "/var/lib/keylime/reg_data.sqlite".
+#   mysql+pymysql://keylime:keylime@keylime_db:[port]/verifier?charset=utf8
+# If database_url is not set, the default is "sqlite", using method 1, and will be
+# located at "/var/lib/keylime/cv_data.sqlite".
 database_url =
-drivername = sqlite
-username = ''
-password = ''
-host = ''
-port = ''
-database = reg_data.sqlite
-query = ''
+database_drivername = sqlite
+database_username = ''
+database_password = ''
+database_host = ''
+database_name = reg_data.sqlite
+database_query = ''
+# Limits for DB connection pool size in sqlalchemy (https://docs.sqlalchemy.org/en/14/core/pooling.html#api-documentation-available-pool-implementations)
+database_pool_sz_ovfl=5,10
 
 auto_migrate_db = True
 
@@ -543,6 +553,11 @@ cfssl_port = 8888
 # The webapp's IP address and port on which it can be reached.
 webapp_ip = 127.0.0.1
 webapp_port = 443
+
+# The intervals for populating agents, updating agents and updating terminal.
+populate_agents_interval = 4000
+update_agents_interval = 1500
+update_terminal_interval = 2000
 
 #=============================================================================
 # GLOBAL LOGGING CONFIGURATION
