Run registrar and verifier as keylime user
There is no need to run them as root.

--- a/debian/python3-keylime.keylime_verifier.service
+++ b/debian/python3-keylime.keylime_verifier.service
@@ -6,6 +6,8 @@ StartLimitBurst=5
 
 [Service]
 Environment=TPM2TOOLS_TCTI=device:/dev/tpmrm0
+Group=tss
+User=keylime
 ExecStart=/usr/bin/keylime_verifier
 Restart=on-failure
 TimeoutSec=60s
