--- a/debian/python3-keylime.keylime_registrar.service
+++ b/debian/python3-keylime.keylime_registrar.service
@@ -6,6 +6,8 @@ StartLimitBurst=5
 
 [Service]
 Environment=TPM2TOOLS_TCTI=device:/dev/tpmrm0
+Group=tss
+User=keylime
 ExecStart=/usr/bin/keylime_registrar
 TimeoutSec=60s
 Restart=on-failure
