Seperating the agent from the server components
Keylime is split into three different components:
- python3-keylime: The keylime python module
- python3-keylime-agent: The binary for the agent and systemd services
- python3-keylime-server: The tenant, registrar and verifier binaries and
                          systemd services

The agent is not really separable from the rest of the Keylime codebase.
Users that need a standalone agent can use the agent written in rust in
the near future.

We cannot use PYBUILD_NAME because otherwise PYBUILD_DESTDIR will be
overwritten.
See: https://salsa.debian.org/python-team/tools/dh-python/-/blob/master/pybuild#L201

--- a/debian/control
+++ b/debian/control
@@ -51,3 +51,15 @@ Description: TPM-based key bootstrapping and system integrity measurement
  flexible framework for the remote attestation of any given `PCR` (Platform
  Configuration Register). Users can create their own customized actions that
  will trigger when a machine fails its attested measurements.
+
+Package: python3-keylime-server
+Architecture: all
+Depends: python3-keylime,
+         ${misc:Depends}
+Description: Keylime server components.
+
+Package: python3-keylime-agent
+Architecture: all
+Depends: python3-keylime,
+         ${misc:Depends}
+Description: Keylime agent.
