--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-export PYBUILD_NAME=keylime
+export PYBUILD_DESTDIR=debian/tmp
 export PYBUILD_DISABLE=test
 export KEYLIME_CONFIG=$(CURDIR)/keylime.conf
 
@@ -8,7 +8,7 @@ export KEYLIME_CONFIG=$(CURDIR)/keylime.conf
 	dh $@ --with python3 --buildsystem=pybuild
 
 override_dh_installsystemd:
-	dh_installsystemd -p python3-keylime --name keylime_agent
-	dh_installsystemd -p python3-keylime --name keylime_registrar
-	dh_installsystemd -p python3-keylime --name keylime_verifier
-	dh_installsystemd -p python3-keylime --name var-lib-keylime-secure
+	dh_installsystemd -p python3-keylime-agent --name keylime_agent
+	dh_installsystemd -p python3-keylime-server --name keylime_registrar
+	dh_installsystemd -p python3-keylime-server --name keylime_verifier
+	dh_installsystemd -p python3-keylime-agent --name var-lib-keylime-secure
