--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,13 @@ export KEYLIME_CONFIG=$(CURDIR)/keylime.conf
 %:
 	dh $@ --with python3 --buildsystem=pybuild
 
+override_dh_installdeb:
+	sed 's/@keylime_part@/server/' debian/python3-keylime.postinst.in > debian/python3-keylime-server.postinst
+	sed 's/@keylime_part@/agent/' debian/python3-keylime.postinst.in > debian/python3-keylime-agent.postinst
+	sed 's/@keylime_part@/server/' debian/python3-keylime.postrm.in > debian/python3-keylime-server.postrm
+	sed 's/@keylime_part@/agent/' debian/python3-keylime.postrm.in > debian/python3-keylime-agent.postrm
+	dh_installdeb
+
 override_dh_installsystemd:
 	dh_installsystemd -p python3-keylime-agent --name keylime_agent
 	dh_installsystemd -p python3-keylime-server --name keylime_registrar
