Use separate configuration for agent
We provide /etc/keylime-agent.conf as the default configuration for the
agent to reduce conflicts when agent and server are installed on the same
maschine.

--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Maintainer: Utkarsh Gupta <utkarsh.gupta@canonical.com>
 Section: python
 Priority: optional
 Build-Depends: debhelper (>= 11),
+               dh-exec,
                dh-python,
                libtss2-dev,
                python3-alembic,
