--- a/debian/python3-keylime.keylime_verifier.service
+++ b/debian/python3-keylime.keylime_verifier.service
@@ -1,5 +1,6 @@
 [Unit]
 After=network.target
+Before=keylime_registrar.service
 Description=The Keylime verifier
 StartLimitInterval=10s
 StartLimitBurst=5
@@ -13,3 +14,4 @@ RestartSec=120s
 
 [Install]
 WantedBy=multi-user.target
+RequiredBy=keylime_registrar.service
