--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,10 @@ export KEYLIME_CONFIG=$(CURDIR)/keylime.conf
 %:
 	dh $@ --with python3 --buildsystem=pybuild
 
+override_dh_install:
+	install -D -m 0644 keylime.conf debian/python3-keylime-agent-local/etc/keylime-agent.conf
+	dh_install
+
 override_dh_installdeb:
 	sed 's/@keylime_part@/server/' debian/python3-keylime.postinst.in > debian/python3-keylime-server.postinst
 	sed 's/@keylime_part@/agent/' debian/python3-keylime.postinst.in > debian/python3-keylime-agent.postinst
