d/control: lintian debhelper-but-no-misc-depends
Signed-off-by: Christian Ehrhardt <christian.ehrhardt@canonical.com>

--- a/debian/control
+++ b/debian/control
@@ -30,6 +30,7 @@ Architecture: all
 Depends: python3-keylime-server,
          python3-keylime-agent,
          python3-keylime-agent-local,
+         ${misc:Depends}
 Description: Keylime - full local install
  ${Description}
  .
