d/python3-keylime.postinst.in: lintian recursive-privilege-change
I'm not sure how to deal with /var/lib/keylime, but the log is just a
directory without content (on install) and therefore can skip -R.

Signed-off-by: Christian Ehrhardt <christian.ehrhardt@canonical.com>

--- a/debian/python3-keylime.postinst.in
+++ b/debian/python3-keylime.postinst.in
@@ -36,7 +36,7 @@ case "$1" in
 
     # Setting owner of log dir of server
     if [ "${KEYLIME_PART}" = "server" ] && [ -d /var/log/keylime ] && getent passwd keylime >/dev/null; then
-        chown -R keylime:tss /var/log/keylime
+        chown keylime:tss /var/log/keylime
     fi
 
     ;;
