d/control: python pkgs should declare ${python3:Depends}
Signed-off-by: Christian Ehrhardt <christian.ehrhardt@canonical.com>

--- a/debian/control
+++ b/debian/control
@@ -68,7 +68,8 @@ Architecture: all
 Depends: adduser,
          python3-keylime-lib,
          python3,
-         ${misc:Depends}
+         ${misc:Depends},
+         ${python3:Depends}
 Description: Keylime registrar and verifier
  ${Description}
  .
@@ -80,7 +81,8 @@ Architecture: all
 Depends: adduser,
          python3-keylime-lib,
          python3,
-         ${misc:Depends}
+         ${misc:Depends},
+         ${python3:Depends}
 Description: Keylime agent
  ${Description}
  .
