--- a/debian/python3-keylime-server.keylime_registrar.service
+++ b/debian/python3-keylime-server.keylime_registrar.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=The Keylime registrar service
-After=network.target
+After=network.target keylime_verifier.service
 StartLimitInterval=10s
 StartLimitBurst=5
 
