--- a/debian/python3-keylime-server.keylime_verifier.service
+++ b/debian/python3-keylime-server.keylime_verifier.service
@@ -4,6 +4,7 @@ Before=keylime_registrar.service
 Description=The Keylime verifier
 StartLimitInterval=10s
 StartLimitBurst=5
+ConditionPathExistsGlob=/etc/keylime.conf
 
 [Service]
 Group=tss
