--- a/debian/control
+++ b/debian/control
@@ -29,7 +29,7 @@ Package: python3-keylime
 Architecture: all
 Depends: python3-keylime-server,
          python3-keylime-agent,
-         python3-keylime-agent-local,
+         python3-keylime-defaultconf,
          python3-keylime-tenant,
          ${misc:Depends}
 Description: Keylime - full local install
@@ -37,9 +37,9 @@ Description: Keylime - full local install
  .
  This is a metapackage meant for compatibility with former versions
  and will depend on python3-keylime-tenant, python3-keylime-server and
- python3-keylime-agent as well as python3-keylime-agent-local bringing
- all services onto the local system including a configuration to connect
- against the local services.
+ python3-keylime-agent as well as python3-keylime-defaultconf bringing all
+ services onto the local system including a configuration to connect against
+ the local services.
 
 Package: python3-keylime-lib
 Architecture: all
@@ -60,6 +60,7 @@ Depends: libtss2-dev,
          tpm2-tools,
          ${misc:Depends},
          ${python3:Depends}
+Recommends: python3-keylime-doc
 Description: Keylime python library
  ${Description}
  .
@@ -72,7 +73,9 @@ Depends: adduser,
          python3,
          ${misc:Depends},
          ${python3:Depends}
-Recommends: python3-keylime-tenant
+Recommends: python3-keylime-tenant,
+            python3-keylime-defaultconf,
+            python3-keylime-doc
 Description: Keylime registrar and verifier
  ${Description}
  .
@@ -86,16 +89,18 @@ Depends: adduser,
          python3,
          ${misc:Depends},
          ${python3:Depends}
+Recommends: python3-keylime-doc
+Suggests: python3-keylime-defaultconf
 Description: Keylime agent
  ${Description}
  .
  This is the keylime agent which is meant to run on all measured/monitored
- systems - it comes without a default configuration and will not start until
- one is provided.
+ systems - on its own it comes without a default configuration and will not
+ start until one is provided to prevent misconfigurations.
  .
- Once you deploy /etc/keylime-agent.conf via any means the service will
- start using that configuration. There is an /etc/keylime-agent.conf.example
- provided to start with.
+ Once you deploy /etc/keylime.conf via any means the service will start using
+ that configuration. The package python3-keylime-doc will have an example
+ in usr/share/doc/keylime/keylime.conf.
 
 Package: python3-keylime-tenant
 Architecture: all
@@ -104,18 +109,29 @@ Depends: adduser,
          python3,
          ${misc:Depends},
          ${python3:Depends}
+Recommends: python3-keylime-defaultconf,
+            python3-keylime-doc
 Description: Keylime tenant tool
  ${Description}
  .
  A tool for provisioning and to control keylime suite.
 
-Package: python3-keylime-agent-local
+Package: python3-keylime-defaultconf
 Architecture: all
-Depends: python3-keylime-agent,
-         ${misc:Depends}
-Description: Keylime config for a local installation
+Depends: ${misc:Depends}
+Description: Keylime default config for a fully local installation
  ${Description}
  .
- This package contains a default config for running the agent against a local
- verifier/registrar which is useful for testing but not a common real scenario
- for keylime.
+ This package contains a default config /etc/keylime.conf to running against
+ a local verifier/registrar which is useful for testing but not a common real
+ scenario for keylime.
+
+Package: python3-keylime-doc
+Architecture: all
+Depends: ${misc:Depends}
+Description: Keylime docs and example config
+ ${Description}
+ .
+ This package contains the documentation provided by upstream and an example
+ configuration file for keylime provided under the doc path at
+ usr/share/doc/keylime/etc/keylime.conf.example.
