--- a/debian/control
+++ b/debian/control
@@ -21,17 +21,17 @@ Build-Depends: debhelper (>= 11),
                python3-zmq,
                tpm-udev,
                tpm2-abrmd,
-               tpm2-tools
+               tpm2-tools,
 Standards-Version: 4.5.0
 Homepage: https://keylime.dev
 
 Package: python3-keylime
 Architecture: all
-Depends: python3-keylime-server,
-         python3-keylime-agent,
+Depends: python3-keylime-agent,
          python3-keylime-defaultconf,
+         python3-keylime-server,
          python3-keylime-tenant,
-         ${misc:Depends}
+         ${misc:Depends},
 Description: Keylime - full local install
  ${Description}
  .
@@ -59,8 +59,8 @@ Depends: libtss2-dev,
          tpm2-abrmd,
          tpm2-tools,
          ${misc:Depends},
-         ${python3:Depends}
-Recommends: python3-keylime-doc
+         ${python3:Depends},
+Recommends: python3-keylime-doc,
 Description: Keylime python library
  ${Description}
  .
@@ -69,13 +69,13 @@ Description: Keylime python library
 Package: python3-keylime-server
 Architecture: all
 Depends: adduser,
-         python3-keylime-lib,
          python3,
+         python3-keylime-lib,
          ${misc:Depends},
-         ${python3:Depends}
-Recommends: python3-keylime-tenant,
-            python3-keylime-defaultconf,
-            python3-keylime-doc
+         ${python3:Depends},
+Recommends: python3-keylime-defaultconf,
+            python3-keylime-doc,
+            python3-keylime-tenant,
 Description: Keylime registrar and verifier
  ${Description}
  .
@@ -85,12 +85,12 @@ Description: Keylime registrar and verifier
 Package: python3-keylime-agent
 Architecture: all
 Depends: adduser,
-         python3-keylime-lib,
          python3,
+         python3-keylime-lib,
          ${misc:Depends},
-         ${python3:Depends}
-Recommends: python3-keylime-doc
-Suggests: python3-keylime-defaultconf
+         ${python3:Depends},
+Recommends: python3-keylime-doc,
+Suggests: python3-keylime-defaultconf,
 Description: Keylime agent
  ${Description}
  .
@@ -105,12 +105,12 @@ Description: Keylime agent
 Package: python3-keylime-tenant
 Architecture: all
 Depends: adduser,
-         python3-keylime-lib,
          python3,
+         python3-keylime-lib,
          ${misc:Depends},
-         ${python3:Depends}
+         ${python3:Depends},
 Recommends: python3-keylime-defaultconf,
-            python3-keylime-doc
+            python3-keylime-doc,
 Description: Keylime tenant tool
  ${Description}
  .
@@ -118,7 +118,7 @@ Description: Keylime tenant tool
 
 Package: python3-keylime-defaultconf
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends},
 Description: Keylime default config for a fully local installation
  ${Description}
  .
@@ -128,7 +128,7 @@ Description: Keylime default config for a fully local installation
 
 Package: python3-keylime-doc
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends},
 Description: Keylime docs and example config
  ${Description}
  .
