New upstream version 6.2.0

--- a/services/keylime_agent.service.template
+++ b/services/keylime_agent.service.template
@@ -3,6 +3,7 @@ Description=The Keylime compute agent
 
 [Service]
 ExecStart=KEYLIMEDIR/keylime_agent
+KillSignal=SIGINT
 
 [Install]
 WantedBy=default.target
