--- a/keylime.conf
+++ b/keylime.conf
@@ -73,7 +73,7 @@ extract_payload_zip = True
 # 'dmidecode -s system-uuid'.
 # If you set this to "hostname", Keylime will use the full qualified domain
 # name of current host as the agent id.
-agent_uuid = D432FBB3-D2F1-4A97-9EF7-75BD81C00000
+agent_uuid = d432fbb3-d2f1-4a97-9ef7-75bd81c00000
 
 # Whether to listen for revocation notifications from the verifier or not.
 listen_notfications = True
@@ -257,6 +257,26 @@ revocation_notifier_port = 8992
 # 100MB (104857600 bytes). This setting can be raised (or lowered) based on the
 # size of the actual payloads
 max_upload_size = 104857600
+
+# The name of the boot attestation policy to use in comparing a measured boot event log
+# with a measured boot reference state.
+# A policy is a Python object that `isinstance` of `keylime.elchecking.policies.Policy`
+# and was registered by calling `keylime.elchecking.policies.register`.
+# The keylime agent extracts the measured boot event log.
+# The verifier client specifies the measured boot reference state to use;
+# this is specified independently for each agent.
+# Depending on the policy, the same reference state may be usable with multiple agents.
+# The `accept-all` policy ignores the reference state and approves every log.
+measured_boot_policy_name = accept-all
+
+# This is a comma-separated list of Python modules to dynamically load,
+# for example to register additional boot attestation policies.
+# Empty strings in the list are ignored
+# (e.g., a value of `a,b,` means the same thing as `a,b`).
+# A module here may be relative, in which case it is interpreted
+# relative to the keylime.elchecking package.
+# The default value for this config item is the empty string.
+# measured_boot_imports = keylime.elchecking
 
 #=============================================================================
 [tenant]
