--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,8 @@ Build-Depends: debhelper (>= 11),
                python3-dbus,
                python3-gnupg,
                python3-m2crypto,
+               python3-packaging,
+               python3-psutil,
                python3-requests,
                python3-setuptools,
                python3-simplejson,
@@ -49,6 +51,8 @@ Depends: libtss2-dev,
          python3-cryptography,
          python3-gnupg,
          python3-m2crypto,
+         python3-packaging,
+         python3-psutil,
          python3-requests,
          python3-simplejson,
          python3-sqlalchemy,
