Make the path to chown absolute
Otherwise, systemd rejects execution of these.
The upshot is that the files in said directories
remain owned by root:root, and therefore are
inaccessible to keylime. This in turn causes an
immediate attestation failure when measured boot
attestation is attempted.

Closes: #30

--- a/debian/python3-keylime-agent.keylime_agent.service
+++ b/debian/python3-keylime-agent.keylime_agent.service
@@ -13,8 +13,8 @@ ConditionPathExistsGlob=/etc/keylime.conf
 User=keylime
 Group=tss
 Environment=TPM2TOOLS_TCTI=device:/dev/tpmrm0 KEYLIME_CONFIG=/etc/keylime.conf
-ExecStartPre=-+chown -hHR keylime:tss /sys/kernel/security/tpm0
-ExecStartPre=-+chown -hHR keylime:tss /sys/kernel/security/ima
+ExecStartPre=-+/bin/chown -hHR keylime:tss /sys/kernel/security/tpm0
+ExecStartPre=-+/bin/chown -hHR keylime:tss /sys/kernel/security/ima
 ExecStart=/usr/bin/keylime_agent
 KillSignal=SIGINT
 TimeoutSec=60s
