--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,6 @@ Priority: optional
 Build-Depends: debhelper (>= 11),
                dh-exec,
                dh-python,
-               libtss2-dev,
                python3-alembic,
                python3-all,
                python3-cryptography,
@@ -44,8 +43,7 @@ Description: Keylime - full local install
 
 Package: python3-keylime-lib
 Architecture: all
-Depends: libtss2-dev,
-         python3,
+Depends: python3,
          python3-cryptography,
          python3-gnupg,
          python3-m2crypto,
