--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Run tests
-      run: .ci/test_wrapper_gha.sh
+      run: .ci/test_wrapper.sh
   lint:
     runs-on: ubuntu-latest
     container:
