--- a/keylime.conf
+++ b/keylime.conf
@@ -253,6 +253,13 @@ revocation_notifier = True
 revocation_notifier_ip = 127.0.0.1
 revocation_notifier_port = 8992
 
+# Enable revocation notifications via webhook. This can be used to notify other
+# systems that do not have a Keylime agent running.
+revocation_notifier_webhook = False
+
+# Webhook url for revocation notifications.
+webhook_url = ''
+
 # The verifier limits the size of upload payloads (allowlists) which defaults to
 # 100MB (104857600 bytes). This setting can be raised (or lowered) based on the
 # size of the actual payloads
@@ -277,6 +284,22 @@ measured_boot_policy_name = accept-all
 # relative to the keylime.elchecking package.
 # The default value for this config item is the empty string.
 # measured_boot_imports = keylime.elchecking
+
+# Severity labels for revocation events strictly ordered from least severity to
+# highest severtiy.
+severity_labels = ["info", "notice", "warning", "error", "critical", "alert", "emergency"]
+
+# Severity policy that matches different event_ids to the severity label.
+# The rules are evaluated from the beginning of the list and the first match is
+# used. The event_id can also be a regex. Default policy assigns the highest
+# severity to all events.
+severity_policy = [{"event_id": ".*", "severity_label": "emergency"}]
+
+# If files are already opened when IMA tries to measure them this causes
+# a time of measure, time of use (ToMToU) error entry.
+# By default we ignore those entries and only print a warning.
+# Set to True to treat ToMToU entries as errors.
+tomtou_errors = False
 
 #=============================================================================
 [tenant]
@@ -484,14 +507,6 @@ private_key_pw = default
 # Use "CV" to use 'cv_ca', the directory automatically created (and shared
 # with the registar) by the CV.
 registrar_tls_dir = CV
-
-# The following three options set the filenames in the 'tls_dir' where the CA
-# certificate, client certificate, and client private key file can be found.
-# If 'tls_dir = default', then default values will be used for 'ca_cert =
-# cacert.pem', 'my_cert = client-cert.crt', and 'private_key = client-private.pem'.
-registrar_ca_cert = default
-registrar_my_cert = default
-registrar_private_key = default
 
 # Set the password needed to decrypt the private key file.
 # This should be set to a strong password.
