Add Thore Sommer as an uploader

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,6 @@
 Source: keylime
 Maintainer: Utkarsh Gupta <utkarsh.gupta@canonical.com>
+Uploaders: Thore Sommer <debian@thson.de>
 Section: python
 Priority: optional
 Build-Depends: debhelper (>= 11),
