--- a/debian/common.postinst.in
+++ b/debian/common.postinst.in
@@ -1,9 +1,7 @@
-#!/bin/sh
+# shared functions between all postinst files
 
-set -e
-
-case "$1" in
-    configure)
+keylime_setup_group_user ()
+{
     # creating tss group if he isn't already there
     if ! getent group tss >/dev/null; then
         addgroup --system tss
@@ -24,22 +22,4 @@ case "$1" in
                 --gecos "Keylime remote attestation" \
                 keylime
     fi
-
-    # Setting owner and file permissions
-    if [ -f /etc/keylime.conf ] && ! dpkg-statoverride --list /etc/keylime.conf >/dev/null && getent passwd keylime >/dev/null; then
-        chown -R keylime:tss /etc/keylime.conf
-        chmod 600 /etc/keylime.conf
-    fi
-
-    ;;
-
-    abort-upgrade|abort-remove|abort-deconfigure)
-    ;;
-
-    *)
-        echo "postinst called with unknown argument \`$1'" >&2
-        exit 1
-    ;;
-esac
-
-#DEBHELPER#
+}
