New upstream version 6.3.0

--- a/keylime.conf
+++ b/keylime.conf
@@ -14,8 +14,8 @@ tls_check_hostnames = False
 # Note: Revocation list generation is only supported by "cfssl".
 ca_implementation = openssl
 
-# Revocation IP & Port used by either the cloud_agent or keylime_ca to receive
-# revocation events from the verifier.
+# The address and port of the revocation notifier service on the verifier from
+# which either the cloud_agent or keylime_ca receive revocation events.
 receive_revocation_ip = 127.0.0.1
 receive_revocation_port = 8992
 
@@ -38,6 +38,13 @@ registrar_port = 8890
 
 # The name of the RSA key that Keylime should use for protecting shares of U/V.
 rsa_keyname = tci_rsa_key
+
+# The name of the X509 certificate that is used for mTLS. Uses the rsa_keyname as a key.
+mtls_cert = tci_mtls_cert
+
+# The CA that signs the client certificates of the tenant and verifier.
+# If set to default it tries to use /var/lib/keylime/cv_ca/cacert.crt
+keylime_ca = default
 
 # The name that should be used for the encryption key, placed in the
 # /var/lib/keylime/secure/ directory.
@@ -65,10 +72,11 @@ tpm_ownerpassword = keylime
 extract_payload_zip = True
 
 # The agent's UUID.
-# Set to "openstack", it will try to get the UUID from the metadata service.
 # If you set this to "generate", Keylime will create a random UUID.
 # If you set this to "hash_ek", Keylime will set the UUID to the result
 # of 'SHA256(public EK in PEM format)'.
+# If you set this to "environment", Keylime will use the value of the
+# environment variable "KEYLIME_AGENT_UUID" as UUID.
 # If you set this to "dmidecode", Keylime will use the UUID from
 # 'dmidecode -s system-uuid'.
 # If you set this to "hostname", Keylime will use the full qualified domain
@@ -114,12 +122,14 @@ max_retries = 10
 
 # TPM2-specific options, allows customizing default algorithms to use.
 # Specify the default crypto algorithms to use with a TPM2 for this agent.
+# On kernel versions less than 5.10 choose sha1 as hash algorithm, because
+# otherwise IMA attestation will fail.
 #
 # Currently accepted values include:
 # - hashing:    sha512, sha384, sha256 or sha1
 # - encryption: ecc or rsa
 # - signing:    rsassa, rsapss, ecdsa, ecdaa or ecschnorr
-tpm_hash_alg = sha256
+tpm_hash_alg = sha1
 tpm_encryption_alg = rsa
 tpm_signing_alg = rsassa
 
@@ -165,7 +175,7 @@ ca_cert = default
 # 'tls_dir' directory.
 # The following two options also take the value "default" to find files
 # with names such as <fully_qualified_domain_name>-cert.crt and
-# <fully_qualified_domain_name>-public.pem for the cert and private key,
+# <fully_qualified_domain_name>-private.pem for the cert and private key,
 # respectively.
 my_cert = default
 private_key = default
@@ -202,6 +212,12 @@ registrar_private_key = default
 # If you are using the auto generated keys from the CV, set the same password
 # here as you did for 'private_key_pw' above.
 registrar_private_key_pw = default
+
+# mTLS configuration for connecting to the agent.
+# Set 'agent_mtls_cert' to 'CV' for using the CV CA for the connections.
+agent_mtls_cert = CV
+agent_mtls_private_key =
+agent_mtls_private_key_pw =
 
 # Database URL Configuration
 # See this document https://keylime-docs.readthedocs.io/en/latest/installation.html#database-support
@@ -247,7 +263,7 @@ quote_interval = 2
 # Currently this only works if you are using keylime-CA.
 revocation_notifier = True
 
-# The revocation notifier IP address and port used to start the revocation service.
+# The binding address and port of the revocation notifier service.
 # If the 'revocation_notifier' option is set to "true", then the verifier
 # automatically starts the revocation service.
 revocation_notifier_ip = 127.0.0.1
@@ -330,6 +346,13 @@ tls_dir = default
 ca_cert = default
 my_cert = default
 private_key = default
+
+
+# mTLS configuration for connecting to the agent.
+# Set 'agent_mtls_cert' to 'CV' for using the CV CA for the connections.
+agent_mtls_cert = CV
+agent_mtls_private_key =
+agent_mtls_private_key_pw =
 
 # EK certificate storage location (directory).
 tpm_cert_store = /var/lib/keylime/tpm_cert_store/
@@ -487,7 +510,7 @@ ca_cert = default
 # The filename (in 'tls_dir') of the registrar certificate and private key.
 # The following two options also take the value "default" to find files
 # with names such as <fully_qualified_domain_name>-cert.crt and
-# <fully_qualified_domain_name>-public.pem for the cert and private key,
+# <fully_qualified_domain_name>-private.pem for the cert and private key,
 # respectively.
 my_cert = default
 private_key = default
