New upstream version 6.3.1

--- a/keylime.conf
+++ b/keylime.conf
@@ -37,9 +37,12 @@ registrar_ip = 127.0.0.1
 registrar_port = 8890
 
 # The name of the RSA key that Keylime should use for protecting shares of U/V.
+# If rsa_keyname is not a absolute path it is relative to /var/lib/keylime/secure.
 rsa_keyname = tci_rsa_key
 
 # The name of the X509 certificate that is used for mTLS. Uses the rsa_keyname as a key.
+# If mtls_cert is not a absolute path it is relative to /var/lib/keylime/secure.
+# This certificate must be self signed.
 mtls_cert = tci_mtls_cert
 
 # The CA that signs the client certificates of the tenant and verifier.
@@ -84,7 +87,7 @@ extract_payload_zip = True
 agent_uuid = d432fbb3-d2f1-4a97-9ef7-75bd81c00000
 
 # Whether to listen for revocation notifications from the verifier or not.
-listen_notfications = True
+listen_notifications = True
 
 # The path to the certificate to verify revocation messages received from the
 # verifier.  The path is relative to /var/lib/keylime.
@@ -113,12 +116,16 @@ payload_script=autorun.sh
 # Set to -1 or any negative or out of range PCR value to turn off.
 measure_payload_pcr=-1
 
-# How long to wait between failed attempts to communicate with the TPM in
-# seconds.  Floating point values are accepted here.
-retry_interval = 1
+# Wether or not to use an exponantial backoff algorithm for retries.
+exponential_backoff = True
+
+# Either how long to wait between failed attempts to communicate with the TPM
+# in seconds, or the base for the exponential backoff algorithm.
+# Floating point values accepted here.
+retry_interval = 2
 
 # Integer number of retries to communicate with the TPM before giving up.
-max_retries = 10
+max_retries = 4
 
 # TPM2-specific options, allows customizing default algorithms to use.
 # Specify the default crypto algorithms to use with a TPM2 for this agent.
@@ -237,7 +244,6 @@ database_username = ''
 database_password = ''
 database_host = ''
 database_name = cv_data.sqlite
-database_query = ''
 # Limits for DB connection pool size in sqlalchemy (https://docs.sqlalchemy.org/en/14/core/pooling.html#api-documentation-available-pool-implementations)
 database_pool_sz_ovfl=5,10
 
@@ -248,12 +254,16 @@ auto_migrate_db = True
 # Set to "0" to create one worker per processor.
 multiprocessing_pool_num_workers = 0
 
-# How long to wait between failed attempts to connect to a cloud agent, in
-# seconds.  Floating point values accepted here.
-retry_interval = 1
+# Wether or not to use an exponantial backoff algorithm for retries.
+exponential_backoff = True
+
+# Either how long to wait between failed attempts to connect to a cloud agent
+# in seconds, or the base for the exponential backoff algorithm.
+# Floating point values accepted here.
+retry_interval = 2
 
 # Number of retries to connect to an agent before giving up. Must be an integer.
-max_retries = 10
+max_retries = 5
 
 # Time between integrity measurement checks, in seconds.  If set to "0", checks
 # will done as fast as possible.  Floating point values accepted here.
@@ -431,12 +441,16 @@ accept_tpm_hash_algs = sha512,sha384,sha256,sha1
 accept_tpm_encryption_algs = ecc,rsa
 accept_tpm_signing_algs = ecschnorr,rsassa
 
-# How long to wait between failed attempts to connect to a cloud agent, in
-# seconds.  Floating point values accepted here.
-retry_interval = 1
+# Wether or not to use an exponantial backoff algorithm for retries.
+exponential_backoff = True
+
+# Either how long to wait between failed attempts to connect to a cloud agent
+# in seconds, or the base for the exponential backoff algorithm.
+# Floating point values accepted here.
+retry_interval = 2
 
 # Number of retries to connect to a agent before giving up. Must be an integer.
-max_retries = 10
+max_retries = 5
 
 # Tell the tenant whether to require an EK certificate from the TPM.
 # If set to False the tenant will ignore EK certificates entirely.
@@ -558,7 +572,6 @@ database_username = ''
 database_password = ''
 database_host = ''
 database_name = reg_data.sqlite
-database_query = ''
 # Limits for DB connection pool size in sqlalchemy (https://docs.sqlalchemy.org/en/14/core/pooling.html#api-documentation-available-pool-implementations)
 database_pool_sz_ovfl=5,10
 
