add /var/run/keylime to server components
The socket for zeromq is moved from /tmp to /var/run/keylime.

--- a/debian/python3-keylime.postrm.in
+++ b/debian/python3-keylime.postrm.in
@@ -24,6 +24,7 @@ if [ "$1" = "purge" ]; then
   if [ "${KEYLIME_PART}" = "server" ]; then
     # Only the server uses the log directory
     rm -rf /var/log/keylime
+    rm -rf /var/run/keylime
     rm -rf "${KEYLIME_DIR}/cv_ca"
     for db in $(find ${KEYLIME_DIR} -name '*.sqlite'); do
       rm -rf ${db}
