--- a/debian/python3-keylime.postinst.in
+++ b/debian/python3-keylime.postinst.in
@@ -21,6 +21,8 @@ case "$1" in
     # Setting owner of log dir of server
     if [ "${KEYLIME_PART}" = "server" ] && [ -d /var/log/keylime ] && ! dpkg-statoverride --list /var/log/keylime >/dev/null && getent passwd keylime >/dev/null; then
         chown keylime:tss /var/log/keylime
+        chown keylime:tss /var/run/keylime
+        chmod 700 /var/run/keylime
     fi
 
     ;;
