--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends: debhelper (>= 11),
                python3-cryptography,
                python3-dbus,
                python3-gnupg,
+               python3-jinja2,
                python3-packaging,
                python3-psutil,
                python3-requests,
@@ -27,7 +28,7 @@ Homepage: https://keylime.dev
 Package: python3-keylime
 Architecture: all
 Depends: python3-keylime-agent,
-         python3-keylime-defaultconf,
+         python3-keylime-sharedconf,
          python3-keylime-server,
          python3-keylime-tenant,
          ${misc:Depends},
@@ -44,9 +45,12 @@ Package: python3-keylime-lib
 Architecture: all
 Depends: python3,
          python3-cryptography,
-         python3-gnupg,
+         python3-gpg,
+         python3-lark,
          python3-packaging,
          python3-psutil,
+         python3-pyasn1,
+         python3-pyasn1-modules,
          python3-requests,
          python3-tornado,
          python3-yaml,
@@ -55,7 +59,6 @@ Depends: python3,
          tpm2-tools,
          ${misc:Depends},
          ${python3:Depends},
-Recommends: python3-keylime-doc,
 Description: Keylime python library
  ${Description}
  .
@@ -67,12 +70,11 @@ Depends: adduser,
          python3,
          python3-alembic,
          python3-keylime-lib,
+         python3-keylime-sharedconf,
          python3-sqlalchemy,
          ${misc:Depends},
          ${python3:Depends},
-Recommends: python3-keylime-defaultconf,
-            python3-keylime-doc,
-            python3-keylime-tenant,
+Recommends: python3-keylime-tenant,
 Description: Keylime registrar and verifier
  ${Description}
  .
@@ -84,10 +86,9 @@ Architecture: all
 Depends: adduser,
          python3,
          python3-keylime-lib,
+         python3-keylime-sharedconf,
          ${misc:Depends},
          ${python3:Depends},
-Recommends: python3-keylime-doc,
-Suggests: python3-keylime-defaultconf,
 Description: Keylime agent
  ${Description}
  .
@@ -104,31 +105,18 @@ Architecture: all
 Depends: adduser,
          python3,
          python3-keylime-lib,
+         python3-keylime-sharedconf,
          ${misc:Depends},
          ${python3:Depends},
-Recommends: python3-keylime-defaultconf,
-            python3-keylime-doc,
 Description: Keylime tenant tool
  ${Description}
  .
  A tool for provisioning and to control keylime suite.
 
-Package: python3-keylime-defaultconf
+Package: python3-keylime-sharedconf
 Architecture: all
 Depends: ${misc:Depends},
-Description: Keylime default config for a fully local installation
+Description: Keylime configs that are shared between components
  ${Description}
  .
- This package contains a default config /etc/keylime.conf to running against
- a local verifier/registrar which is useful for testing but not a common real
- scenario for keylime.
-
-Package: python3-keylime-doc
-Architecture: all
-Depends: ${misc:Depends},
-Description: Keylime docs and example config
- ${Description}
- .
- This package contains the documentation provided by upstream and an example
- configuration file for keylime provided under the doc path at
- usr/share/doc/keylime/etc/keylime.conf.example.
+ This package contains the logging.conf and ca.conf for Keylime.
