--- a/debian/python3-keylime-sharedconf.postinst.in
+++ b/debian/python3-keylime-sharedconf.postinst.in
@@ -1,6 +1,7 @@
 #!/bin/sh
 
 set -e
+KEYLIME_PART=@keylime_part@
 
 #KEYLIME_COMMON#
 
@@ -9,11 +10,15 @@ case "$1" in
     # Setup the keylime user and the tss group
     keylime_setup_group_user
 
+
     # Setting owner and file permissions
-    if [ -f /etc/keylime.conf ] && ! dpkg-statoverride --list /etc/keylime.conf >/dev/null && getent passwd keylime >/dev/null; then
-        chown -R keylime:tss /etc/keylime.conf
-        chmod 600 /etc/keylime.conf
-    fi
+    CONFS="logging.conf ca.conf"
+    for CONF in ${CONFS}; do
+        if [ -f /etc/keylime/${CONF} ] && ! dpkg-statoverride --list /etc/{$CONF} >/dev/null && getent passwd keylime >/dev/null; then
+            chown -R keylime:tss /etc/keylime/${CONF}
+            chmod 600 /etc/keylime/${CONF}
+        fi
+    done
 
     ;;
 
