--- a/debian/rules
+++ b/debian/rules
@@ -2,21 +2,39 @@
 
 export PYBUILD_DESTDIR=debian/tmp
 export PYBUILD_DISABLE=test
-export KEYLIME_CONFIG=$(CURDIR)/keylime.conf
+CONF_PATH=debian/keylime-config
 
 %:
 	dh $@ --with python3 --buildsystem=pybuild
 
+override_dh_auto_build:
+	# Generate all keylime configs
+	mkdir -p $(CONF_PATH)
+	python3 ./scripts/convert_config.py --templates scripts/templates --input keylime.conf --out $(CONF_PATH)
+	dh_auto_build
+
 override_dh_install:
-	# The same file goes into multiple places
-	install -D -m 0644 keylime.conf debian/python3-keylime-defaultconf/etc/keylime.conf
-	install -D -m 0644 keylime.conf debian/python3-keylime-doc/usr/share/doc/keylime/keylime.conf.example
+	# Configs shared by multiple services
+	install -D -m 0644 $(CONF_PATH)/logging.conf debian/python3-keylime-sharedconf/etc/keylime/logging.conf
+	install -D -m 0644 $(CONF_PATH)/ca.conf debian/python3-keylime-sharedconf/etc/keylime/ca.conf
+
+	# Agent
+	install -D -m 0644 $(CONF_PATH)/agent.conf debian/python3-keylime-agent/etc/keylime/agent.conf
+
+	# Server
+	install -D -m 0644 $(CONF_PATH)/registrar.conf debian/python3-keylime-server/etc/keylime/registrar.conf
+	install -D -m 0644 $(CONF_PATH)/verifier.conf debian/python3-keylime-server/etc/keylime/verifier.conf
+
+	# Tenant
+	install -D -m 0644 $(CONF_PATH)/tenant.conf debian/python3-keylime-tenant/etc/keylime/tenant.conf
+
 	dh_install
 
 override_dh_installdeb:
 	sed -e 's/@keylime_part@/server/' -e '/#KEYLIME_COMMON#/ r debian/common.postinst.in' debian/python3-keylime.postinst.in > debian/python3-keylime-server.postinst
 	sed -e 's/@keylime_part@/agent/' -e '/#KEYLIME_COMMON#/ r debian/common.postinst.in' debian/python3-keylime.postinst.in > debian/python3-keylime-agent.postinst
-	sed -e '/#KEYLIME_COMMON#/ r debian/common.postinst.in' debian/python3-keylime-defaultconf.postinst.in > debian/python3-keylime-defaultconf.postinst
+	sed -e 's/@keylime_part@/tenant/' -e '/#KEYLIME_COMMON#/ r debian/common.postinst.in' debian/python3-keylime.postinst.in > debian/python3-keylime-tenant.postinst
+	sed -e '/#KEYLIME_COMMON#/ r debian/common.postinst.in' debian/python3-keylime-sharedconf.postinst.in > debian/python3-keylime-sharedconf.postinst
 	sed 's/@keylime_part@/server/' debian/python3-keylime.postrm.in > debian/python3-keylime-server.postrm
 	sed 's/@keylime_part@/agent/' debian/python3-keylime.postrm.in > debian/python3-keylime-agent.postrm
 	dh_installdeb
